probably all refs added

--- a/refs.bib
+++ b/refs.bib
@@ -1007,3 +1007,46 @@ keywords = "Metrics ",
 abstract = "AbstractContext Usability is an important software quality attribute for APIs. Unfortunately, measuring it is not an easy task since many things like experienced evaluators, suitable test users, and a functional product are needed. This makes existing usability measurement methods difficult to use, especially for non-professionals. Objective To make \{API\} usability measurement easier, an automated and objective measurement method would be needed. This article proposes such a method. Since it would be impossible to find and integrate all possible factors that influence \{API\} usability in one step, the main goal is to prove the feasibility of the introduced approach, and to define an extensible framework so that additional factors can easily be defined and added later. Method A literature review is conducted to find potential factors influencing \{API\} usability. From these factors, a selected few are investigated more closely with usability studies. The statistically evaluated results from these studies are used to define specific elements of the introduced framework. Further, the influence of the user as a critical factor for the framework’s feasibility is evaluated. Results The \{API\} Concepts Framework is defined, with an extensible structure based on concepts that represent the user’s actions, measurable properties that define what influences the usability of these concepts, and learning effects that represent the influence of the user’s experience. A comparison of values calculated by the framework with user studies shows promising results. Conclusion It is concluded that the introduced approach is feasible and provides useful results for evaluating \{API\} usability. The extensible framework easily allows to add new concepts and measurable properties in the future. "
 }
 
+@article{Myers,
+
+author={Myers,Brad A. and Jeong,Sae Y. and Xie,Yingyu and Beaton,Jack and Stylos,Jeff and Ehret,Ralf and Karstens,Jan and Efeoglu,Arkin and Busse,Daniela K.},
+
+year={2010},
+
+title={Studying the Documentation of an API for Enterprise Service-Oriented Architecture},
+
+journal={Journal of Organizational and End User Computing (JOEUC)},
+
+volume={22},
+
+number={1},
+
+pages={23-51},
+
+abstract={All software today is written using application programming interfaces (APIs). We performed a user study of the online documentation of a large and complex API for Enterprise Service-Oriented Architecture (eSOA), which identified many issues and recommendations for making API documentation easier to use. eSOA is an appropriate testbed because the target users include high-level business experts who do not have significant programming expertise and thus can be classified as “end-user developers.” Our study showed that the participants’ background influenced how they navigated the documentation. Lack of familiarity with business terminology was a barrier for developers without business application experience. Both groups avoided areas of the documentation that had an inconsistent visual design. A new design for the documentation that supports flexible navigation strategies seems to be required to support the wide range of users for eSOA. This paper summarizes our study and provides recommendations for future documentation for APIs.;All software today is written using application programming interfaces (APIs). We performed a user study of the online documentation of a large and complex API for Enterprise Service-Oriented Architecture (eSOA), which identified many issues and recommendations for making API documentation easier to use. eSOA is an appropriate testbed because the target users include high-level business experts who do not have significant programming expertise and thus can be classified as "end-user developers." Our study showed that the participants' background influenced how they navigated the documentation. Lack of familiarity with business terminology was a barrier for developers without business application experience. Both groups avoided areas of the documentation that had an inconsistent visual design. A new design for the documentation that supports flexible navigation strategies seems to be required to support the wide range of users for eSOA. This paper summarizes our study and provides recommendations for future documentation for APIs. [PUBLICATION ABSTRACT];All software today is written using application programming interfaces (APIs). We performed a user study of the online documentation of a large and complex API for Enterprise Service-Oriented Architecture (eSOA), which identified many issues and recommendations for making API documentation easier to use. eSOA is an appropriate testbed because the target users include high-level business experts who do not have significant programming expertise and thus can be classified as "end-user developers." Our study showed that the participants' background influenced how they navigated the documentation. Lack of familiarity with business terminology was a barrier for developers without business application experience. Both groups avoided areas of the documentation that had an inconsistent visual design. A new design for the documentation that supports flexible navigation strategies seems to be required to support the wide range of users for eSOA. This paper summarizes our study and provides recommendations for future documentation for APIs. [PUBLICATION ABSTRACT];},
+
+keywords={Systems design; Documentation; Studies; Service oriented architecture; Application programming interface; End users; Applications programming; Web services; Service oriented architecture (Software design); Usability testing; Methods},
+
+isbn={1546-2234},
+
+language={English},
+
+}
+
+@inproceedings{Farooq:2010:AUP:1753326.1753677,
+ author = {Farooq, Umer and Welicki, Leon and Zirkler, Dieter},
+ title = {API Usability Peer Reviews: A Method for Evaluating the Usability of Application Programming Interfaces},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '10},
+ year = {2010},
+ isbn = {978-1-60558-929-9},
+ location = {Atlanta, Georgia, USA},
+ pages = {2327--2336},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1753326.1753677},
+ doi = {10.1145/1753326.1753677},
+ acmid = {1753677},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {api usability, software bugs, usability breakdowns, usability evaluation method (uem), usability inspection},
+}
