participants table addded

--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -168,7 +168,40 @@ To satisfy the requirement of developers with REST API experience (R3), we have 
   \item No prior experience with WordPress REST API.
 \end{itemize}
 
-Participants were recruited through online announcements posted on Twitter, Facebook, and software developer focused mailing lists.
+A total 26 participants from sixteen different companies and six different countries (Canada, USA, Germany, Ireland, Brazil, and,
+Bangladesh) were recruited through online announcements posted on Twitter, Facebook, and software developer focused mailing lists. Table \ref{table:participants} shows a summary of the experience level of the participants on each group.
+
+\begin{table}[!tbh]
+  \caption{Participant Profile}
+  \label{table:participants}
+
+\begin{tabular}{|p{0.8in} p{.6in} p{0.7in} p{0.7in}|}
+
+\hline
+& & \textbf{Group 1} & \textbf{Group 2}\\
+\hline
+\multicolumn{2}{|l}{\textbf{Number of Participants}} & 16 (P1.1-P1.16) & 10 (P2.1-P2.10) \\
+\hline
+\multicolumn{4}{|l|}{\textbf{Industry Experience}} \\
+& 1-5 years & 5 & 1 \\
+& 5-10 years & 6 & 5 \\
+& 10+ years & 5 & 4 \\
+& Average & 9.1 & 10.6 \\
+\hline
+
+\multicolumn{4}{|l|}{\textbf{REST API Experience}} \\
+&   1-3 years & 5 & 3 \\
+&   3-5 years & 7 & 4 \\
+&   5+ years & 4 & 3 \\
+&   Average & 4.5 & 4 \\
+
+\hline
+\multicolumn{2}{|l}{\textbf{Number of Companies}} & 10 & 8 \\
+\hline
+\end{tabular}
+
+\end{table}
+
 
 \subsubsection{Process}
 
