add the observations + implications

--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -261,8 +261,23 @@ average time taken for success = (number of successful API tasks by group) / (to
 
 \subsection{Qualitative Analysis Results} % (fold)
 
-  Observation and Implications
-    For each task, describe the results. Provide examples of failed attempts with counts, and relate to the documentation sources to share an observation. Imply what needs to be done.
+  Key Observations
+
+  API client developers face problem with using the right data type
+    Proof: Number of codes in task 2 for G1 vs. G2
+    Implication: Example to show a happy path scenario
+
+  API client developers face problem with using the right data format
+    Proof: Number of codes in task 3 for G1 vs. G2
+    Implication: Example showing expected data format
+
+  API client developers face problem with using request headers
+    Proof: Number of codes in task 4 for G1 vs. G2
+    Implication: Example showing all 4 inputs
+
+  API client developers face problem with using inter-dependent APIs
+    Proof: Number of successful cases on G1. vs. G2
+    Implication: Example showing dependency
 
 
 \subsection{Quantitative Analysis Results} % (fold)
