adds real data for quantitative section of the results

--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -313,7 +313,7 @@ average time taken for success = (number of successful API tasks by group) / (to
       ylabel= Success Rate,
       yticklabel={\pgfmathparse{\tick}\pgfmathprintnumber{\pgfmathresult}\%},
       width=2.8in,
-      legend style={at={(1.0,1.25)},anchor=north east}
+      legend style={at={(1.0,1.25)},anchor=north east},
     ]
     \addplot[dashed,mark=*,gray] table [col sep=comma, x expr=\coordindex, y=SuccessRate] {groupone_success.csv};
     \addlegendentry{G1: Using Original}
@@ -325,7 +325,8 @@ average time taken for success = (number of successful API tasks by group) / (to
 
 \end{tikzpicture}
 
-\caption{DUMMY Comparison of Trial vs. Successful API Calls}
+\caption{Comparison of Trial vs. Successful API Calls Between the Groups}
+\label{graph:productivity}
 \end{figure}
 
 % subsection rq1 (end)
