box around the images

--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -121,7 +121,7 @@ This self-documenting feature is leveraged to generate and publish the official 
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=\linewidth,keepaspectratio]{schema.png}
+\fbox{\includegraphics[width=\linewidth,keepaspectratio]{schema.png}}
 \end{center}
 \caption{Screenshot showing auto-generated documentation for Post/date}
 \label{fig:schema}
@@ -214,7 +214,7 @@ Two pilot studies were performed to evaluate and understand an effective process
 
 \begin{figure*}[t]
 \begin{center}
-\includegraphics[width=\linewidth,keepaspectratio]{api_explorer.png}
+\fbox{\includegraphics[width=\linewidth,keepaspectratio]{api_explorer.png}}
 \end{center}
 \caption{Screenshot of the web-based REST API explorer}
 \label{fig:api_explorer}
@@ -225,7 +225,7 @@ To overcome the shortcomings found from the first pilot study, we decided to dev
 
 \begin{figure*}[t]
 \begin{center}
-\includegraphics[width=\linewidth,keepaspectratio]{original.png}
+\fbox{\includegraphics[width=\linewidth,height=2.5in,keepaspectratio]{original.png}}
 \end{center}
 \caption{Screenshot of the original WordPress REST API documentation}
 \label{fig:original}
@@ -233,7 +233,7 @@ To overcome the shortcomings found from the first pilot study, we decided to dev
 
 \begin{figure*}[tb]
 \begin{center}
-\includegraphics[width=\linewidth,keepaspectratio]{forked.png}
+\fbox{\includegraphics[width=\linewidth,height=2.5in,keepaspectratio]{forked.png}}
 \end{center}
 \caption{Screenshot of the forked WordPress REST API documentation with a usage example}
 \label{fig:forked}
