--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -304,6 +304,7 @@ To summarize, we recommend API developers to consider usage examples as an essen
 
 \begin{subfigure}{0.5\textwidth}
 \centering
+
 \begin{tikzpicture}
     \begin{axis}[
         ybar,
@@ -378,7 +379,7 @@ To summarize, we recommend API developers to consider usage examples as an essen
 
 \end{subfigure}
 
-\caption{Comparison Between G1 and G2}
+\caption{Quantitative Comparison between G1 and G2}
 \label{fig:comparison}
 \end{figure}
 
