abstract first pass

--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -43,14 +43,7 @@ martin@cs.mcgill.ca}
 \maketitle
 
 \begin{abstract}
-
-[Brain-dump mode]
-
-What is the the problem? Effort and cost associated to REST API documentation with usage examples.
-Why is this a problem? Cost vs. benefit of usage examples is not known. What to include in the examples?
-What have we done? Performed an empirical study with 26 professional software engineers with REST API experience to understand how their productivity and types of problems faced changes with respect to usage examples.
-What have we learned? (Hoping) examples help developer perform task with fewer problems with greater success, with fewer errors, and faster in terms of time.
-What does it mean? (expected) API developers should include usage examples in REST API documentation that include specific examples based on the problems faced.
+Generating and maintaining REST API documentation with usage examples can be a time consuming and expensive process for evolving APIs. Most REST API documentation tools have focused on automating the documentation of the API objects, but require manual effort for capturing realistic usage examples. So, REST API developers need to know the cost vs. benefit of providing usage examples in the documentation as well as what to include in the usage examples to prioritize the documentation tasks. In this paper, we present our observations about the obstacles that REST API client developers face without usage examples in the documentation. To this regard, we have performed a controlled study with 26 experienced software engineers and found that REST API client developers face productivity problems using correct data types, data formats, required HTTP headers and request body when documentation lacks usage examples. The REST API documentation guidelines shared on this paper will help practitioners to improve API client developer productivity and usability.
 
 
 \end{abstract}
