--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -297,7 +297,6 @@ To summarize, we recommend API developers to consider usage examples as an essen
 
 \begin{subfigure}{0.5\textwidth}
 \centering
-
 \begin{tikzpicture}
     \begin{axis}[
         ybar,
@@ -329,16 +328,12 @@ To summarize, we recommend API developers to consider usage examples as an essen
     \addplot[smooth,mark=*,black] table [col sep=comma, x expr=\coordindex, y=SuccessRate] {grouptwo_success.csv};
       \addlegendentry{G2: Using Forked}
     \end{axis}
-
 \end{tikzpicture}
 \caption{Trial vs. Successful API Calls}
 \label{graph:productivity}
-
 \end{subfigure}
-
-\begin{subfigure}{0.5\textwidth}
+\begin{subfigure}{0.4\textwidth}
 \centering
-
 \begin{tikzpicture}
     \begin{axis}[
         ybar,
@@ -357,11 +352,22 @@ To summarize, we recommend API developers to consider usage examples as an essen
 \end{tikzpicture}
 \caption{Average Time Spent}
 \label{graph:time}
-
 \end{subfigure}
 
 
-\begin{subfigure}{0.5\textwidth}
+\caption{Quantitative Comparison between G1 and G2}
+\label{fig:comparison}
+\end{figure*}
+
+We present a summary of the quantitative results as found by analyzing a total of 539 API calls (385 from G1, 152 from G2) made by the participants from this study in Figure \ref{fig:comparison}. Figure \ref{graph:productivity} juxtaposes the average number of trial API calls made by each group against their rate of success in performing the given tasks T2-T6. The average number of trial API calls and success rate for each group is computed using the following formulas:
+
+AverageTrialAPICall(task, group) = Total number of API calls made by group on task / Number of participants in group
+
+SuccessRate(task, group) = Number of participants that correctly completed task / Number of participants in group
+
+In Figure \ref{graph:productivity} and  \ref{graph:time} we see that, for the simpler tasks T2 and T3, G1 had used more trial API calls and more time on average and reached successful answers with a lower percentage compared to G2. For T4, where the participants are required to inspect a HTTP response header, G2 needed more API calls on average, but also yielded 24\% higher success rate. For the more complicated tasks T5 and T6, we see that participants in G1 had very low success rate and very high number of average API trials compared to G2. The data here clearly depicts that without usage examples REST API client developers spend more time and require more trial and error attempts yet resulting in lower success rates, and the situation gets worse for relatively complicated tasks.
+
+\begin{figure}[h]
 \centering
 
 \begin{tikzpicture}
@@ -395,19 +401,7 @@ To summarize, we recommend API developers to consider usage examples as an essen
 \caption{Participation Satisfaction Ratings}
 \label{fig:rating}
 
-\end{subfigure}
-
-\caption{Quantitative Comparison between G1 and G2}
-\label{fig:comparison}
-\end{figure*}
-
-We present a summary of the quantitative results as found by analyzing a total of 539 API calls (385 from G1, 152 from G2) made by the participants from this study in Figure \ref{fig:comparison}. Figure \ref{graph:productivity} juxtaposes the average number of trial API calls made by each group against their rate of success in performing the given tasks T2-T6. The average number of trial API calls and success rate for each group is computed using the following formulas:
-
-AverageTrialAPICall(task, group) = Total number of API calls made by group on task / Number of participants in group
-
-SuccessRate(task, group) = Number of participants that correctly completed task / Number of participants in group
-
-In Figure \ref{graph:productivity} we see that, for the simpler tasks T2 and T3, G1 had used more trial API calls on average and reached successful answers with a lower percentage compared to G2. For T4, where the participants are required to inspect a HTTP response header, G2 needed more API calls on average, but also yielded 24\% higher success rate. For the more complicated tasks T5 and T6, we see that participants in G1 had very low success rate and very high number of average API trials compared to G2. The data here clearly depicts that without usage examples REST API client developers require more trial and error attempts yet resulting in lower success rates, and the situation gets worse for relatively complicated tasks.
+\end{figure}
 
 In Figure \ref{fig:rating}, we see that the G2 participants provided higher satisfaction rating compared to G1 participants. P1.1 provided a satisfaction rating of 9, and analyzing the participant feedback against the success, we see a false positive case, where the participant perceived that the tasks were successfully completed even though only 2 of the 5 tasks were correctly answered. Other than this case, the satisfaction ratings provided by G1 participants consistently fall behind the G2 participants' ratings.
 
