better caption for rating graph

--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -398,7 +398,7 @@ In Figure \ref{graph:productivity} and  \ref{graph:time} we see that, for the si
     ] coordinates {};
   \end{axis}
 \end{tikzpicture}
-\caption{Participation Satisfaction Ratings}
+\caption{Participation Satisfaction Ratings on a Scale of 0-10}
 \label{fig:rating}
 
 \end{figure}
